# common-cpp-testing

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  NOTICE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  codeql-analysis.yml
cmake/: common-cpp-testing-config.cmake.in  m4t-config.cmake.in
include/m4t/: IStreamMock.h  IStream_Mock.h  LogListener.h  MallocSpy.h  m4t.h  memory.h
src/: .clang-tidy  IStreamMock.cpp  IStream_Mock.cpp  LogListener.cpp  MallocSpy.cpp  m4t.cpp  memory.cpp  pch.h
test/: IStreamMock.test.cpp  IStream_Mock_Test.cpp  LogListener.test.cpp  MallocSpy.test.cpp  MallocSpy_Test.cpp  m4t.test.cpp  m4t_Test.cpp  pch.h
